# sea-chip

./: .gitignore  CMakeLists.txt  README.md
chip8/: chip8.cpp  main.cpp
src/: chip8.cpp  chip8.h  main.cpp
test/: chip8Test.cpp  chip8Test.h
